--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-**/iso/GoogleService-Info.plist
-**/plantifp2/google-service.json
+#**/iso/GoogleService-Info.plist
+#**/plantifp2/google-service.json
