Adicionando mecanismo de busca no banco por QRCode.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,8 +69,8 @@ flutter:
    - images/help.png
 
    
-   - images/plants/cannabis.jpg
-   - images/plants/nim.jpg
+   - images/plants/Cannabis.jpg
+   - images/plants/Nim.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
