--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # firebase_core: ^1.3.0
   # firebase_auth: ^2.0.0
   sqflite: ^2.0.0
+  camera: ^0.8.1+5
 
 
   # The following adds the Cupertino Icons font to your application.
