--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.dev.ifpicom.example.plantifpi">
-   <application
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <application
         android:label="PlantIFP2"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- Restante do código do arquivo AndroidManifest.xml -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
