--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # firebase_auth: ^2.0.0
   sqflite: ^2.0.0
   #camera: ^0.8.1+5
-  image_picker: ^0.8.4+4
+  image_picker: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
