--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sqflite: ^2.0.0
   #camera: ^0.8.1+5
   image_picker: ^0.8.4+4
+  path_provider: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
